[workspace]

members = [
  "03_grammar/concepts",
  "03_grammar/scrape_url",
  "03_grammar/scrape_url_args",
  "03_grammar/scrape_url_with_error_handling",
  "04_httpie",
  "05_thumbor",
  "06_queryer/queryer",
  "06_queryer/queryer-py",
  "07_ownership",
  "10_lifetime",
  "11_memory",
  "12_type_system",
  "13_traits",
  "14_sys_traits",
]
