[package]
name = "actix_basic"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"

futures = "0.3.1"
env_logger = "0.5"
bytes = "0.5"
