[package]
name = "async_tcpecho"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client1"

[[bin]]
name = "client2"

[[bin]]
name = "server1"

[[bin]]
name = "server2"

[dependencies]
futures = "0.3"
async-std = { version = "1.6.4", features = ["attributes"]}
