[package]
name = "feature_demo"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]

default = ["test1", "test2"]

test1 = []

test2 = []

test3 = []

test4 = []
