[package]
name = "ffi_callc_demo_1"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libloading = "0.6.3"

[[bin]]
name = "array"
