[package]
name = "ffi_func_pointer_1"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.73"

[lib]
name = "ffi_func_pointer_1"
crate-type = ["staticlib", "cdylib"]


