[package]
name = "hualongdao"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
lazy_static = "1.4.0"
log = { version = "0.4.11", features = ["std"] }
once_cell = "1.4.1"
chrono = "0.4.13"
