[package]
name = "mio_udp_server_demo_1"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["os-util", "os-poll", "tcp", "udp", "uds"] }

[[bin]]
name = "client"

[[bin]]
name = "server"
