[package]
name = "relay"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
lazy_static = "1.4.0"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable", "attributes"]

