[package]
name = "flowout"
version = "0.1.0"
authors = ["huangjian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"

serde = "1.0"
serde_derive = "1.0"

rmp = { version="*", git = "https://github.com/3Hren/msgpack-rust"}
rmp-serialize = { version="*", git = "https://github.com/3Hren/msgpack-rust"}
rmp-serde = { version="*", git = "https://github.com/3Hren/msgpack-rust"}
rmpv = { version="*", git = "https://github.com/3Hren/msgpack-rust"}

rustc-serialize = "0.3.24"

structopt = "0.2.10"

chrono = "0.4"
