[package]
name = "flowout"
version = "0.1.0"
authors = ["huangjian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
structopt = "0.2.10"
chrono = "0.4"
rust_msgpack = { version = "0.1.0", path = "./rust-msgpack/rust_msgpack" }
value_derive = { path = "./rust-msgpack/value_derive" }
value = { path = "./rust-msgpack/value" }
