[package]
name = "async-await-echo"
version = "0.1.0"
authors = ["huangjian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
hyper = "0.12.9"
