[package]
name = "waytoodeep"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
futures = "0.3.16"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.9.0", features = ["full"] }
tokio-rustls = "0.22.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
webpki = "0.21.4"
webpki-roots = "0.21.1"
