[package]
name = "awak"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4"
num_cpus = "1.13"
concurrent-queue = "1.2"
async-task = "4.0"
rand = "0.8"
libc = "0.2"
slab = "0.4"
socket2 = "0.3"
cfg-if = "0.1"
pin-project-lite = "0.2"
futures-util = { version = "0.3", features = ["io"] }
parking_lot = "0.11"
