[package]
name = "type_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "constant"
path = "src/constant.rs"

[[bin]]
name = "id"
path = "src/id.rs"

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "writer"
path = "src/writer.rs"

[dependencies]
