[package]
name = "dds_config_checking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
walkdir = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
