[package]
name = "s0_account_manager"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "s0_account_manager"
path = "src/lib.rs"

[[bin]]
name = "s0_account_manager"
path = "src/main.rs"

[dependencies]
tide = "0.15.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
redis = "0.17.0"
anyhow = "1.0"
