[package]
name = "sn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sn"
path = "src/main.rs"

[[bin]]
name = "wsclient"
path = "src/wsclient.rs"

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
actix-multipart = "0.4"
awc = "3"

futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"

env_logger = "0.9"
log = "0.4"

json = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }

