[package]
name = "futures_select_demo_1"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = { version = "1.6.4", features = ["attributes"]}
