[package]
name = "example_2"
version = "0.1.0"
authors = ["huangjian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fromhashmap_derive_2 = { path = "../fromhashmap_derive_2" }
value = { path = "../value" }
variableValue = { path = "../variableValue" }
