[package]
name = "heapsize_derive"
version = "0.1.0"
authors = ["huangjian <1342042894@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15.39"
