[package]
name = "tide_hello"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"

[dependencies.tide]
version = "0.6.0"

[dependencies.futures]
version = "0.3.1"

[dependencies.async-std]
# https://docs.rs/async-std/1.5.0/async_std/#features
version = "1.0.1"
features = ["unstable", "attributes"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.cookie]
version = "0.12.0"
features = ["percent-encode"]
